# esp32weather

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  flash.sh  monitor.sh  sdkconfig
app/: CMakeLists.txt  app.overlay  prj.conf
app/dts/bindings/: backlight-pin.yaml
app/src/: main.c
app/src/display/: CMakeLists.txt  display.c  display.h  widgets.c  widgets.h
app/src/display/fonts/: jetbrains_12.c  jetbrains_14.c  jetbrains_18.c  jetbrains_20.c  jetbrains_28.c
app/src/display/images/: wife.c
app/src/forecast/: CMakeLists.txt  forecast.c  forecast.h  forecast_json.h  user_data.h  wifi.c
app/src/ths/: CMakeLists.txt  ths.c  ths.h
app/src/weather/: CMakeLists.txt  weather.c  weather.h
app/src/wifi/: CMakeLists.txt  wifi.h
drivers/epaper/: CMakeLists.txt  epaper.c  epaper.h  epdfont.h
main/: CMakeLists.txt  esp32weather.c
model/: backplate.FCStd  backplate.stl  model.FCStd  model.stl
modules/display_controller/: CMakeLists.txt  display_controller.c  display_controller.h
